// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login: index mapStateToProps 1`] = `
Object {
  "isLoggedIn": true,
  "isOpen": true,
  "selectedApp": Object {},
  "serverError": undefined,
}
`;

exports[`Login: index renders with values 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Login
    closeLoginOverlay={[Function]}
    isOpen={true}
    resetError={[Function]}
    resetSelectedApp={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form>
        <Blueprint.Dialog
          canOutsideClickClose={true}
          className="pt-dark"
          iconName="inbox"
          isOpen={true}
          onClose={[Function]}
          title="Login"
        >
          <withRouter(Connect(ReduxForm))
            closeLoginOverlay={[Function]}
          />
        </Blueprint.Dialog>
      </form>,
      "className": "smd-pad-16",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Blueprint.Dialog
          canOutsideClickClose={true}
          className="pt-dark"
          iconName="inbox"
          isOpen={true}
          onClose={[Function]}
          title="Login"
        >
          <withRouter(Connect(ReduxForm))
            closeLoginOverlay={[Function]}
          />
        </Blueprint.Dialog>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "canOutsideClickClose": true,
          "children": <withRouter(Connect(ReduxForm))
            closeLoginOverlay={[Function]}
          />,
          "className": "pt-dark",
          "iconName": "inbox",
          "isOpen": true,
          "onClose": [Function],
          "title": "Login",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "closeLoginOverlay": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form>
          <Blueprint.Dialog
            canOutsideClickClose={true}
            className="pt-dark"
            iconName="inbox"
            isOpen={true}
            onClose={[Function]}
            title="Login"
          >
            <withRouter(Connect(ReduxForm))
              closeLoginOverlay={[Function]}
            />
          </Blueprint.Dialog>
        </form>,
        "className": "smd-pad-16",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Blueprint.Dialog
            canOutsideClickClose={true}
            className="pt-dark"
            iconName="inbox"
            isOpen={true}
            onClose={[Function]}
            title="Login"
          >
            <withRouter(Connect(ReduxForm))
              closeLoginOverlay={[Function]}
            />
          </Blueprint.Dialog>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "canOutsideClickClose": true,
            "children": <withRouter(Connect(ReduxForm))
              closeLoginOverlay={[Function]}
            />,
            "className": "pt-dark",
            "iconName": "inbox",
            "isOpen": true,
            "onClose": [Function],
            "title": "Login",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "closeLoginOverlay": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
          "getChildContext": Object {
            "calledByRenderer": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Login: index renders without values 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Login
    closeLoginOverlay={[Function]}
    isOpen={false}
    resetError={[Function]}
    resetSelectedApp={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form>
        <Blueprint.Dialog
          canOutsideClickClose={true}
          className="pt-dark"
          iconName="inbox"
          isOpen={false}
          onClose={[Function]}
          title="Login"
        >
          <withRouter(Connect(ReduxForm))
            closeLoginOverlay={[Function]}
          />
        </Blueprint.Dialog>
      </form>,
      "className": "smd-pad-16",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Blueprint.Dialog
          canOutsideClickClose={true}
          className="pt-dark"
          iconName="inbox"
          isOpen={false}
          onClose={[Function]}
          title="Login"
        >
          <withRouter(Connect(ReduxForm))
            closeLoginOverlay={[Function]}
          />
        </Blueprint.Dialog>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "canOutsideClickClose": true,
          "children": <withRouter(Connect(ReduxForm))
            closeLoginOverlay={[Function]}
          />,
          "className": "pt-dark",
          "iconName": "inbox",
          "isOpen": false,
          "onClose": [Function],
          "title": "Login",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "closeLoginOverlay": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form>
          <Blueprint.Dialog
            canOutsideClickClose={true}
            className="pt-dark"
            iconName="inbox"
            isOpen={false}
            onClose={[Function]}
            title="Login"
          >
            <withRouter(Connect(ReduxForm))
              closeLoginOverlay={[Function]}
            />
          </Blueprint.Dialog>
        </form>,
        "className": "smd-pad-16",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Blueprint.Dialog
            canOutsideClickClose={true}
            className="pt-dark"
            iconName="inbox"
            isOpen={false}
            onClose={[Function]}
            title="Login"
          >
            <withRouter(Connect(ReduxForm))
              closeLoginOverlay={[Function]}
            />
          </Blueprint.Dialog>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "canOutsideClickClose": true,
            "children": <withRouter(Connect(ReduxForm))
              closeLoginOverlay={[Function]}
            />,
            "className": "pt-dark",
            "iconName": "inbox",
            "isOpen": false,
            "onClose": [Function],
            "title": "Login",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "closeLoginOverlay": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
          "getChildContext": Object {
            "calledByRenderer": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;
